RKB: Add build support for the LMbench3 benchmark suite - http://www.bitmover.com/lmbench/ (yes, from the 1990's :)
Cbench only installs the lat_mem_rd memory latency benchmark, though all of LMbench is built.  

This commit is only for LMbench build support; lat_mem_rd will be incorporated into nodehwtest in the future.

--- a/cbench/Makefile
+++ b/cbench/Makefile
@@ -23,7 +23,7 @@
 
 include make.def
 
-HW_TESTS = fpck ctcs memtester streams nodeperf llcbench stress matmult stride stab 
+HW_TESTS = fpck ctcs memtester streams nodeperf llcbench stress matmult stride stab lmbench
 
 STANDALONEOPEN_TESTS = b_eff mpi_latency mpi_hello mpi_hello_ordered mpi_overhead \
              mpi_routecheck rotate IMB osutests stab perftest mpi_examples mpi_slowcpu \
