RKB: Add build support for the Portable Hardware Locality (hwloc) tool from the OpenMPI project.
This commit allows Cbench to build and install the 'lstopo' program for our convenience.

My idea is to eventually leverage hwloc's abilities when running node-level tests; for now, 
it's just convenient for Cbench to be able to build hwloc in case it isn't already on a system.

--- a/cbench/Makefile
+++ b/cbench/Makefile
@@ -36,7 +36,7 @@ OPEN_TESTS = b_eff mpi_latency mpi_hello mpi_hello_ordered mpi_overhead \
              mpi_routecheck ior_bench iozone bonnie++ rotate HPLlinpack \
              IMB osutests lanl stab perftest mpi_examples mpi_slowcpu \
              mpi_malloc mpi_tokensmash phloem HPLinpack2 \
-             fdtree simul mdtest miranda_io graph500
+             fdtree simul mdtest miranda_io graph500 hwloc
 
 OPENEXTRAS_TESTS = NPB hpcc
 
