--- a/cbench/opensource/graph500/Makefile
+++ b/cbench/opensource/graph500/Makefile
@@ -1,14 +1,26 @@
-# Makefile for Graph500 1.2 for Cbench
+# Makefile for Graph500 for Cbench
 
-include ../../make.def
+# NOTE: as of June 2011 I haven't had any luck compiling graph500
+#       with PGI 10.0+ compilers. GCC and Intel seem to work fine.
+
+include $(CBENCHOME)/make.def
 
 export CFLAGS
 
-SRC=graph500-1.2
+#SRC=graph500-1.2
+SRC=graph500-2.1.4
 TAR=$(SRC).tar.bz2
 URL=http://www.graph500.org/$(TAR)
+
+# this block was used to build graph500 from the alternate source tree on 
+# Github... your mileage may vary
+#
+#SRC=rudolph9-Graph500-b2841d6
+#TAR=b2841d66c7b308a4e9711df259fb829d225df048.tgz
+#URL=https://github.com/rudolph9/Graph500/tarball/b2841d66c7b308a4e9711df259fb829d225df048
+#wget --no-check-certificate https://github.com/rudolph9/Graph500/tarball/b2841d66c7b308a4e9711df259fb829d225df048 -O b2841d66c7b308a4e9711df259fb829d225df048.tgz
+
 GRAPH500=$(CBENCHOME)/opensource/graph500
-#HPL2=$(CBENCHOME)/opensource/HPLinpack2
 
 # NORMAL MPI COMPILE
 EXECS = src/mpi/graph500_mpi_one_sided src/mpi/graph500_mpi_simple
@@ -21,13 +33,21 @@ default: $(default_tgt)
 
 all: mpi 
 
-mpi: $(SRC)
-	$(MAKE) -C $(SRC) MPICC=$(CC) CC=$(PLAINCC)
+mpi: $(SRC) src/make.inc clean
+	$(MAKE) -C $(SRC)/mpi MPICC=$(CC) CC=$(PLAINCC) CFLAGS="-Drestrict=__restrict__ -DNDEBUG -DGRAPH_GENERATOR_MPI $(CFLAGS)" LDFLAGS=$(LDFLAGS) 
+#	$(MAKE) -C $(SRC) MPICC=$(CC) CC=$(PLAINCC) make-edgelist
+
+src/make.inc:
+	ln -sf $(GRAPH500)/make.inc-cbench $(GRAPH500)/src/make.inc
 
 $(SRC): $(TAR)
-	-[ ! -d $(SRC) ] && tar xjf $(TAR)
+	file $(TAR) | grep -q bzip; \
+	if [ $$? -eq 0 ]; then \
+		[ ! -d $(SRC) ] && tar xjf $(TAR); \
+	else \
+		[ ! -d $(SRC) ] && tar xzf $(TAR); \
+	fi;
 	ln -sf $(SRC) src
-	ln -sf $(GRAPH500)/make.inc-cbench $(GRAPH500)/src/make.inc
 	touch $(SRC)
 
 $(TAR):
@@ -40,7 +60,7 @@ clean:
 	-[ -d $(SRC) ] && $(MAKE) -C $(SRC) clean
 
 distclean:
-	/bin/rm -rf $(SRC) src $(TAR)
+	/bin/rm -rf $(SRC) src $(TAR) .patched
 
 install uninstall:
 	$(do-$@)
