--- a/cbench/templates/lammps_eam.scaled.in
+++ b/cbench/templates/lammps_eam.scaled.in
@@ -10,7 +10,7 @@
 cbench_check_for_bin CBENCHTEST_BIN_HERE/lmp_cbench
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/lmp_cbench SCALING_PARAMS_HERE"
-STDIN_FILE="$CBENCHTEST/lammps/bench/in.eam"
+STDIN_FILE="CBENCHTEST_HERE/lammps/bench/in.eam"
 
 cbench_run_cmd $CMD
 
