--- a/cbench/templates/lammps_rhodo.in
+++ b/cbench/templates/lammps_rhodo.in
@@ -8,7 +8,7 @@ cbench_check_for_bin CBENCHTEST_BIN_HERE/lmp_cbench
 
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/lmp_cbench"
-STDIN_FILE="$CBENCHTEST/lammps/bench/in.rhodo"
+STDIN_FILE="CBENCHTEST_HERE/lammps/bench/in.rhodo"
 
 cbench_run_cmd $CMD
 
