--- a/cbench/templates/lammps_rhodo.scaled.in
+++ b/cbench/templates/lammps_rhodo.scaled.in
@@ -7,7 +7,7 @@
 cbench_check_for_bin CBENCHTEST_BIN_HERE/lmp_cbench
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/lmp_cbench SCALING_PARAMS_HERE"
-STDIN_FILE="$CBENCHTEST/lammps/bench/in.rhodo.scaled"
+STDIN_FILE="CBENCHTEST_HERE/lammps/bench/in.rhodo.scaled"
 
 cbench_run_cmd $CMD
 
