perftest stuff refused to compile on on systems that don't use mpicc, mpiCC as the MPI compile wrapper names. tweaked the configure of perftest to honor what Cbench tells it is the correct mpi compile wrapper.  so far this seems to work with Cray Linux and a normal Openmpi setup.
also gut perftest configure's insistence on using -O4 -Ofast
if the compiler supports it. force it to honor the Cbench compile
options

--- a/cbench/opensource/perftest/Makefile
+++ b/cbench/opensource/perftest/Makefile
@@ -37,11 +37,15 @@ $(SRC): $(TAR)
 	fi
 	ln -sf $(SRC) src
 
-configure: $(SRC)
+src/Makefile: $(SRC)
 	echo ${COMPILERCOLLECTION} > src/.config
-	cd src; CC=$(PLAINCC) F77=$(PLAINF77) CFLAGS='$(CFLAGS)' FFLAGS='$(FFLAGS)' ./configure --with-mpi=$(MPIHOME)
+	cd src; MPICC=$(CC) MPIF77=$(F77) CC=$(PLAINCC) F77=$(PLAINF77) CFLAGS='$(CFLAGS)' FFLAGS='$(FFLAGS)' ./configure 
+	@if [ -f $(SRC)/Makefile ]; then \
+		sed -i 's/-O4 -Ofast//' $(SRC)/Makefile; \
+	fi
+	touch $@
 
-src/stress: configure
+src/stress: src/Makefile
 	make -C src stress
 
 clean:
