--- a/cbench/tools/snb_report.tex.in
+++ b/cbench/tools/snb_report.tex.in
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[landscape]{article}
 \usepackage{graphicx,float,wrapfig}
 \usepackage{listings}
 \usepackage[usenames,dvipsnames]{color}
@@ -12,12 +12,21 @@
   {\begin{itemize}\item[]\lstinputlisting[caption=#2,label=#1]{#1}\end{itemize}}
 
 % Set margins
-\topmargin=-0.45in          %
-\evensidemargin=0in         %
-\oddsidemargin=0in          %
-\textwidth=6.5in            %
-\textheight=9.0in           %
-\headsep=0.25in             %
+%%% for landscape mode %%%
+\setlength{\textwidth}{10in}
+\setlength{\textheight}{7.5in}
+\setlength{\evensidemargin}{0in}
+\setlength{\oddsidemargin}{0in}
+\setlength{\topmargin}{0in}
+
+%%% for portrait mode %%%
+%\topmargin=-0.45in          %
+%\evensidemargin=0in         %
+%\oddsidemargin=0in          %
+%\textwidth=6.5in            %
+%\textheight=9.0in           %
+%\headsep=0.25in             %
+
 \setlength{\parindent}{0in} % we don't want indents on paragraphs
 \setlength{\parskip}{7pt}
 
@@ -28,6 +37,8 @@
 \usepackage{courier}        % tt
 \normalfont
 \usepackage[T1]{fontenc}
+\usepackage{multirow}
+\usepackage{array}
 
 
 %\title{Cbench Single Node Benchmark Report for \texttt{}}
