RKB: Update to SHOC version 1.1.1.
Update the Makefile so that it will add the CUDA
and OpenCL library paths to $LD_LIBRARY_PATH and 
the MPI and CUDA /bin paths to $PATH.

--- a/cbench/opensource/shoc/Makefile
+++ b/cbench/opensource/shoc/Makefile
@@ -2,18 +2,6 @@
 
 include ../../make.def
 
-## check for CUDA environment
-#ifeq ($(shell $(CBENCHOME)/tools/check_env.sh -cuda),1)
-#  CFLAGS += -I$(CUDAINC) CXXFLAGS+=-I$(CUDAINC) CPPFLAGS+=-I$(CUDAINC) LDFLAGS+=-L$(CUDALIB)
-#  CONFIGPARAMS += --with-cuda
-#endif
-#
-## Check for OpenCL Environment
-#ifeq ($(shell $(CBENCHOME)/tools/check_env.sh -opencl),1)
-#  CFLAGS += -I$(OPENCLINC) CXXFLAGS += -I$(OPENCLINC) CPPFLAGS += -I$(OPENCLINC) LDFLAGS += -L$(OPENCLLIB) 
-#  CONFIGPARAMS += --with-opencl
-#endif
-
 # check for CUDA environment and add flags
 ifdef CUDALIB
   ifdef CUDAINC
@@ -52,7 +40,8 @@ export CPPFLAGS
 export LDFLAGS
 export LIBS
 
-SRC=shoc-1.0.3
+#SRC=shoc-1.0.3
+SRC=shoc-1.1.1
 TAR=$(SRC).tar.gz
 URL=http://ft.ornl.gov/doku/_media/shoc/$(TAR)
 SHOC=$(CBENCHOME)/opensource/shoc
@@ -64,11 +53,13 @@ default_tgt := all
 INSTALLDIR = $(bin_dir)/shoc
 INSTALLTARGETS = $(EXECS)
 
+ENV_SETUP = LD_LIBRARY_PATH=$(CUDALIB):$(OPENCLLIB):$(LD_LIBRARY_PATH) PATH=$(CUDALIB)/../bin:$(OPENCLLIB)/../bin:$(MPIHOME)/bin:$(PATH) CXX=mpicxx 
+
 default: $(default_tgt)
 
 all: $(SRC)
-	@cd src; CXX=mpicxx ./configure $(CONFIGPARAMS) --with-mpi --with-mpi-includes=-I$(MPIHOME)/include --with-mpi-libraries=-L$(MPIHOME)/lib
-	$(MAKE) -C $(SRC)
+	@cd src; $(ENV_SETUP) ./configure $(CONFIGPARAMS) --with-mpi
+	$(ENV_SETUP) $(MAKE) -C $(SRC)
 
 $(SRC): $(TAR)
 	-[ ! -d $(SRC) ] && tar xzf $(TAR)
