RKB: Some minor tweaks of the SNB table generation stuff.

--- a/cbench/tools/snb_report.tex.in
+++ b/cbench/tools/snb_report.tex.in
@@ -39,6 +39,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{multirow}
 \usepackage{array}
+\usepackage{caption}
 
 
 %\title{Cbench Single Node Benchmark Report for \texttt{}}
