from now on join stdout/stderr into single files for torque like slurm does

--- a/cbench/templates/torque_header.in
+++ b/cbench/templates/torque_header.in
@@ -7,6 +7,7 @@
 #
 #PBS -l nodes=TORQUE_NODESPEC_HERE
 #PBS -l walltime=WALLTIME_HERE
+#PBS -j oe
 #
 # other attributes you might use but are hidded from Torque processing
 #HIDE -q somequeue
