--- a/openapps/lammps/Makefile
+++ b/openapps/lammps/Makefile
@@ -34,7 +34,7 @@ $(SRC): $(TAR)
 	touch $(SRC)
 
 $(TAR) download:
-	$(call download-url,$(URL))
+	$(call download-wget-url,$(URL))
 	-[ -e $(TAR) ] && touch $(TAR)
 
 clean:
